[Akshay] MOD:Updated stripe with publishable key implementation
